<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/restaurant_registers_buyer_fragment_til_password_old"
        style="@style/text_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:errorTextAppearance="@style/error_appearance"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/restaurant_registers_buyer_old_password_etxt"
            style="@style/EditText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password_old"
            android:inputType="textPassword"  />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/restaurant_registers_buyer_fragment_til_password"
        style="@style/text_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:errorTextAppearance="@style/error_appearance"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/restaurant_registers_buyer_password_etxt"
            style="@style/EditText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"  />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/restaurant_rigister_fragment_til_confirm_password"
        style="@style/text_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:errorTextAppearance="@style/error_appearance"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/restaurant_registers_buyer_confirm_password_etxt"
            style="@style/EditText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"  />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/client_register_buer_next_btn"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_35sdp"
        />
</LinearLayout>