<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|start"
        android:background="@drawable/background2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backg"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="?attr/actionBarSize"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_55sdp">


                    <TextView
                        android:id="@+id/conect_data_txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:fontFamily="@font/janna"
                        android:text="@string/conect_data"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conect_data_fragment_til_phone"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    android:layout_marginTop="@dimen/_20sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conect_data_email_etxt"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_phone_white_24dp"
                        android:hint="@string/phone"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conect_data_fragment_til_whats_app"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conect_data_whats_app_etxt"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/whats"
                        android:hint="@string/whats_app"
                        android:inputType="textPassword"  />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp">


                    <TextView
                        android:id="@+id/conect_data_txt_restraunt_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:fontFamily="@font/janna"
                        android:text="@string/restraunt_image"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <ImageView
                    android:id="@+id/client_conect_data_img_restraunt_image_botton"
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:src="@drawable/ic_store_black_24dp"
                    android:background="@drawable/button_restaurant"
                    android:padding="@dimen/_7sdp"
                    />
                <Button
                    android:id="@+id/conect_data_buer_register_btn"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_data_register"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>