<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    <ImageView-->
    <!--        android:layout_width="@dimen/_320sdp"-->
    <!--        android:layout_height="@dimen/_320sdp"-->
    <!--        android:layout_gravity="center|start"-->
    <!--        android:layout_marginStart="-120dp"-->
    <!--        android:layout_marginTop="@dimen/_35sdp"-->
    <!--        android:background="@drawable/splash_top" />-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|start"
        android:background="@drawable/background2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backg"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/janna"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="?attr/actionBarSize"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/client_and_restaurant_forget_password_fragment_til_pin_code"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    app:errorTextAppearance="@style/error_appearance"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@drawable/button_order_owner"
                    android:textColorHint="@color/gray2"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_etxt"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:hint="@string/enter_email"
                        android:textColor="@color/gray2"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/client_and_restaurant_forget_password_next_btn"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sending"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>